--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,50 +1,50 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary==2.9.9
-redis==5.0.1
+pydantic==2.5.0
+pydantic-settings==2.1.0
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+python-decouple==3.8
 aiofiles==23.2.1
-elasticsearch==8.11.0
-python-dotenv==1.0.0
-celery==5.3.4
-flower==2.0.1
 httpx==0.25.2
-websockets==12.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-# Для SAST анализа
+redis==5.0.1
+asyncpg==0.29.0
+supabase==2.3.0
+postgrest==0.15.0
+gotrue==2.4.2
+realtime==1.0.5
+storage3==0.7.4
+functions==4.3.0
 semgrep==1.45.0
 bandit==1.7.5
-# Для работы с файлами
-xmltodict==0.13.0
-PyPDF2==3.0.1
-python-docx==1.1.0
-openpyxl==3.1.2
-# Для интеграций
-requests==2.31.0
-paramiko==3.3.1
-GitPython==3.1.40
-# Мониторинг и метрики
+safety==2.3.5
+trivy-python==0.5.1
+pycryptodome==3.19.0
+reportlab==4.0.7
+fpdf2==2.7.6
+jinja2==3.1.2
+markdown==3.5.1
+celery==5.3.4
+flower==2.0.1
 prometheus-client==0.19.0
-# Безопасность
-cryptography==41.0.7
-# Парсинг и валидация
-pydantic[email]==2.5.0
-email-validator==2.1.0
-# Утилиты
-python-slugify==8.0.1
-Pillow==10.1.0
-# WebSocket поддержка
-websockets==12.0
-# Кэширование
-aiocache==0.12.2
-# Логирование
+sentry-sdk[fastapi]==1.38.0
 structlog==23.2.0
-# Тестирование
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.2 
+alembic==1.13.1
+SQLAlchemy==2.0.23
+python-dotenv==1.0.0
+websockets==12.0
+PyYAML==6.0.1
+requests==2.31.0
+aioredis==2.0.1
+cryptography==41.0.8
+bcrypt==4.1.2
+email-validator==2.1.0
+pillow==10.1.0
+openpyxl==3.1.2
+pandas==2.1.4
+numpy==1.25.2
+matplotlib==3.8.2
+plotly==5.17.0
+pytz==2023.3
+python-dateutil==2.8.2 
