--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,17 +6,20 @@ RUN apk add --no-cache git
 # Создание рабочей директории
 WORKDIR /app
 
-# Копирование package files
+# Копирование package.json и package-lock.json
 COPY package*.json ./
 
 # Установка зависимостей
-RUN npm ci --only=production
+RUN npm ci
 
 # Копирование исходного кода
 COPY . .
 
-# Сборка приложения
-RUN npm run build
+# Экспорт порта
+EXPOSE 3000
+
+# Запуск dev сервера
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
 
 # Использование nginx для сервинга
 FROM nginx:alpine
