--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,86 +1,63 @@
 {
-  "name": "networkview-is-frontend",
+  "name": "bmk-security-cabinet-frontend",
   "version": "2.0.0",
-  "description": "React frontend для NetworkView IS",
+  "description": "Личный кабинет инженера по информационной безопасности банка БМК",
   "private": true,
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "react-query": "^3.39.3",
-    "axios": "^1.6.2",
-    "@reduxjs/toolkit": "^1.9.7",
-    "react-redux": "^8.1.3",
-    "@mui/material": "^5.14.20",
-    "@mui/icons-material": "^5.14.19",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/x-data-grid": "^6.18.2",
-    "@mui/x-charts": "^6.18.3",
-    "recharts": "^2.8.0",
-    "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-dropzone": "^14.2.3",
-    "react-beautiful-dnd": "^13.1.1",
-    "mxgraph": "^4.2.2",
-    "@types/mxgraph": "^4.0.8",
-    "draw.io": "^22.1.2",
-    "react-flow-renderer": "^10.3.17",
-    "socket.io-client": "^4.7.4",
-    "react-hot-toast": "^2.4.1",
-    "formik": "^2.4.5",
-    "yup": "^1.3.3",
-    "@hookform/resolvers": "^3.3.2",
-    "react-hook-form": "^7.48.2",
-    "date-fns": "^2.30.0",
-    "lodash": "^4.17.21",
-    "clsx": "^2.0.0",
-    "react-helmet-async": "^1.3.0",
-    "react-error-boundary": "^4.0.11",
-    "react-intersection-observer": "^9.5.3",
-    "react-virtualized": "^9.22.5",
-    "react-window": "^1.8.8",
-    "uuid": "^9.0.1",
-    "file-saver": "^2.0.5",
-    "js-cookie": "^3.0.5",
-    "jwt-decode": "^4.0.0",
-    "i18next": "^23.7.6",
-    "react-i18next": "^13.5.0",
-    "web-vitals": "^3.5.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@types/node": "^20.10.4",
-    "@types/lodash": "^4.14.202",
-    "@types/file-saver": "^2.0.7",
-    "@types/js-cookie": "^3.0.6",
-    "@types/uuid": "^9.0.7",
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
-    "typescript": "^5.3.3",
-    "eslint": "^8.55.0",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.1.1",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/user-event": "^13.5.0",
-    "vite-plugin-pwa": "^0.17.4",
-    "vite-plugin-eslint": "^1.8.1"
-  },
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src --ext ts,tsx --fix",
-    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,json,css,md}",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "type-check": "tsc --noEmit"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "@mui/material": "^5.14.20",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/lab": "^5.0.0-alpha.155",
+    "@mui/x-charts": "^6.18.3",
+    "@mui/x-data-grid": "^6.18.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@supabase/supabase-js": "^2.38.5",
+    "axios": "^1.6.2",
+    "react-query": "^3.39.3",
+    "react-hook-form": "^7.48.2",
+    "@hookform/resolvers": "^3.3.2",
+    "yup": "^1.4.0",
+    "zustand": "^4.4.7",
+    "react-toastify": "^9.1.3",
+    "cytoscape": "^3.28.1",
+    "@types/cytoscape": "^3.19.16",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "@types/react-syntax-highlighter": "^15.5.11",
+    "react-dropzone": "^14.2.3",
+    "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.202",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.8",
+    "@types/react-window": "^1.8.8",
+    "file-saver": "^2.0.5",
+    "@types/file-saver": "^2.0.7"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-react": "^4.1.1",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   },
   "browserslist": {
     "production": [
@@ -93,6 +70,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8000"
+  }
 } 
